# zivverscim

./: .env.dummy  README.md  requirements.txt  setup.cfg
.github/workflows/: deploy_zivverscim_pypi.yml
src/zivver/: exceptions.py  external_connection.py  scim_connection_crud.py  wrapper.py
src/zivverscim/: exceptions.py  scim_connection_crud.py  wrapper.py
tests/: config.py  crud_accounts.py
