[metadata]
name = Zivver
version = 0.5.0
author = Igor van Spengen
author_email = igor@adapta.nl
description = A Zivver SDK for account manipulation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Adapta-dev/zivver
project_urls =
    Bug Tracker = https://github.com/Adapta-dev/zivver/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU GENERAL PUBLIC LICENSE v3.0 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
