[metadata]
name = zivverscim
version = 1.0.0
author = Igor van Spengen
author_email = igor@adapta.nl
description = A ZivverSCIM SDK for account manipulation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Adapta-dev/zivverscim
project_urls =
    Bug Tracker = https://github.com/Adapta-dev/zivverscim/issues
classifiers =
    Programming Language :: Python :: 3
    LICENSE :: OSI APPROVED :: GNU LESSER GENERAL PUBLIC LICENSE V3 (LGPLV3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
